stateDiagram-v2
  direction TB
  [*] --> deciding
  deciding --> parsed : completion_parse_rules_ [token_definition_operator_] / consume_definition_operator_
  deciding --> parse_failed : completion_parse_rules_ [parse_failed_] / dispatch_parse_failed_
  parsed --> terminate : [always] / none
  parse_failed --> terminate : [always] / none
  deciding --> unexpected_event : _ [always] / on_unexpected_
  parsed --> unexpected_event : _ [always] / on_unexpected_
  parse_failed --> unexpected_event : _ [always] / on_unexpected_
  unexpected_event --> unexpected_event : _ [always] / on_unexpected_
